examples/tests/semantic/pass/function-var.tig
let
	function a () : int = 10
	var b := a ()
in
end
