examples/tests/semantic/fail/loopVariableAssign.tig
let 
    var taylor := "Taylor"
in 
    for index := 1 to 4 do (index := 3)
end 